--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
       <header>
         <div class="brand">
-          <a href="#">
+          <a class="special" href="#">
             <img src="/assets/icons/brand.png" alt="" />
             <h1>وبسایت فروشگاهی</h1>
           </a>
@@ -18,10 +18,10 @@
         <div class="search">
           <div class="box">
             <input type="text" placeholder="دنبال محصول خاصی میگردید؟" />
+            <button id="search-btn">
+              <img src="/assets/icons/search.svg" alt="" />
+            </button>
           </div>
-          <button id="search-btn">
-            <img src="/assets/icons/search.svg" alt="" />
-          </button>
         </div>
         <div class="user-actions">
           <div class="action-links">
@@ -32,6 +32,7 @@
               <img src="/assets/icons/cart.png" alt="" />
             </a>
           </div>
+          <span class="vertical-line"></span>
           <div class="auth-links">
             <a class="auth-link" href="#register">ثبت نام</a>
             <a class="auth-link" href="#login">ورود</a>
