added a section to header for show welcome message and navbar

--- a/index.html
+++ b/index.html
@@ -10,36 +10,56 @@
   <body>
     <div class="main">
       <header>
-        <div class="brand">
-          <a class="special" href="#">
-            <img src="/assets/icons/brand.png" alt="" />
-            <h1>وبسایت فروشگاهی</h1>
-          </a>
-        </div>
-        <div class="search">
-          <div class="box">
-            <input type="text" placeholder="دنبال محصول خاصی میگردید؟" />
-            <button id="search-btn">
-              <img src="/assets/icons/search.svg" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="user-actions">
-          <div class="action-links">
-            <a class="action-link" href="#favorites">
-              <img src="/assets/icons/heart.png" alt="" />
-            </a>
-            <a class="action-link" href="#cart">
-              <img src="/assets/icons/cart.png" alt="" />
+        <div class="section-1">
+          <div class="brand">
+            <a class="special" href="#">
+              <img src="/assets/icons/brand.png" alt="" />
+              <h1>وبسایت فروشگاهی</h1>
             </a>
           </div>
-          <span class="vertical-line"></span>
-          <div class="auth-links">
-            <a class="auth-link" href="#register">ثبت نام</a>
-            <a class="auth-link" href="#login">ورود</a>
+          <div class="search">
+            <div class="box">
+              <input type="text" placeholder="دنبال محصول خاصی میگردید؟" />
+              <button id="search-btn">
+                <img src="/assets/icons/search.svg" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="user-actions">
+            <div class="action-links">
+              <a class="action-link" href="#favorites">
+                <img src="/assets/icons/heart.png" alt="" />
+              </a>
+              <a class="action-link" href="#cart">
+                <img src="/assets/icons/cart.png" alt="" />
+              </a>
+            </div>
+            <span class="vertical-line"></span>
+            <div class="auth-links">
+              <a class="auth-link" href="#register">ثبت نام</a>
+              <a class="auth-link" href="#login">ورود</a>
+            </div>
+          </div>
+        </div>
+        <div class="section-2">
+          <div class="navbar">
+            <nav>
+              <a href="#home">خانه</a>
+              <a href="#products">محصولات</a>
+              <a href="#categories">دسته بندی ها</a>
+              <a href="#about-us">درباره ما</a>
+            </nav>
+          </div>
+          <div class="welcome-msg">
+            <span id="greeting-text">صبح بخیر</span>
+            <span>،</span>
+            <span>به وبسایت ما خوش آمدید</span>
+            <span class="vertical-line"></span>
+            <img id="greeting-icon" src="/assets/icons/morning.png" alt="">
           </div>
         </div>
       </header>
     </div>
+    <script src="/scripts/global.js"></script>
   </body>
 </html>
