--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             </div>
           </div>
         </div>
+        <div class="spacer"></div>
         <div class="section-2">
           <div class="navbar">
             <nav>
