created a section called website-advertise

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>وبسایت فروشگاهی</title>
     <link rel="icon" type="image/x-icon" href="/assets/icons/brand.png" />
+    <link rel="stylesheet" href="/libs/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/index.css">
   </head>
   <body>
     <div class="overlay hidden"></div>
@@ -102,7 +104,52 @@
           </div>
         </div>
       </header>
+      <main>
+        <section class="website-advertise">
+          <div class="swiper">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="card">
+                  <div class="side-1">
+                    <h3>فقط سه مرحله هس :‌ سفارش - پردازش - ارسال!</h3>
+                    <p>ما اعتبارمون رو از شما گرفتیم پس جای نگرانی وجود نداره و همین امروز میتونی با اطمینان خرید کنی.</p>
+                  </div>
+                  <div class="side-2">
+                    <img src="/assets/gifs/online-shopping.gif" alt="">
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card">
+                  <div class="side-1">
+                    <h3>پشتیبانی ۲۴ ساعته عین رفیق کنارته!</h3>
+                    <p>هر مشکلی دارید تو سفارش و هر گونه مشکلات فنی و مالی رو میتونید با خیال راحت به پشتیبانی بگید.</p>
+                  </div>
+                  <div class="side-2">
+                    <img src="/assets/gifs/support.gif" alt="">
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="card">
+                  <div class="side-1">
+                    <h3>هر نقطه ای  از کشور باشی برا ما فرقی نمیکنه!</h3>
+                    <p>هر جای ایران که باشی برای ما کاری نداره ما مرسوله رو بهت میرسونیم اونم با کیفیت و بدون هیچ مشکلی</p>
+                  </div>
+                  <div class="side-2">
+                    <img src="/assets/gifs/delivery-truck.gif" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </section>
+      </main>
     </div>
+    <script src="/libs/swiper/swiper-bundle.min.js"></script>
     <script src="/scripts/global.js"></script>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
