--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
               </div>
             </div>
             <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
           </div>
         </section>
       </main>
