made most-visted section and bit chnage on style of h4 of bestsellers section

--- a/index.html
+++ b/index.html
@@ -295,6 +295,154 @@
             </div>
           </div>
         </section>
+        <section class="most-visted">
+          <h4>پربازدید ترین ها</h4>
+          <div class="products">
+            <div class="swiper swiper-products sp-2">
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="product-card">
+                    <a class="special" href="#product">
+                      <div class="row-1">
+                        <img src="/assets/images/croma.png" alt="">
+                      </div>
+                      <div class="row-2">
+                        <div class="rate">
+                          <img src="/assets/icons/star.png" alt="">
+                          <span class="rate-number">۵</span>
+                        </div>
+                        <h5>هدفون بلوتوث کروما با میکروفون (پخش تا 16 ساعت، روی گوش، مشکی)</h5>
+                        <span class="price">۱۳,۹۶۰,۰۰۰ تومان</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="/libs/swiper/swiper-bundle.min.js"></script>
