added icons for navbar in header and drawer menu

--- a/index.html
+++ b/index.html
@@ -40,10 +40,22 @@
           </a>
         </div>
         <div class="navbar">
-          <a href="#home">خانه</a>
-          <a href="#products">محصولات</a>
-          <a href="#categories">دسته بندی ها</a>
-          <a href="#about-us">درباره ما</a>
+          <a href="#home">
+            <img src="/assets/icons/house.png" alt="">
+            <span>خانه</span>
+          </a>
+          <a href="#products">
+            <img src="/assets/icons/product.png" alt="">
+            <span>محصولات</span>
+          </a>
+          <a href="#categories">
+            <img src="/assets/icons/category.png" alt="">
+            <span>دسته بندی ها</span>
+          </a>
+          <a href="#about-us">
+            <img src="/assets/icons/about-us.png" alt="">
+            <span>درباره ما</span>
+          </a>
         </div>
       </div>
     </div>
@@ -89,10 +101,22 @@
         <div class="section-2">
           <div class="navbar">
             <nav>
-              <a href="#home">خانه</a>
-              <a href="#products">محصولات</a>
-              <a href="#categories">دسته بندی ها</a>
-              <a href="#about-us">درباره ما</a>
+              <a href="#home">
+                <img src="/assets/icons/house.png" alt="">
+                <span>خانه</span>
+              </a>
+              <a href="#products">
+                <img src="/assets/icons/product.png" alt="">
+                <span>محصولات</span>
+              </a>
+              <a href="#categories">
+                <img src="/assets/icons/category.png" alt="">
+                <span>دسته بندی ها</span>
+              </a>
+              <a href="#about-us">
+                <img src="/assets/icons/about-us.png" alt="">
+                <span>درباره ما</span>
+              </a>
             </nav>
           </div>
           <div class="welcome-msg">
