made some changes on website advertise and changed the font size for the devices which smaller than 640px

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
               <div class="swiper-slide">
                 <div class="card">
                   <div class="side-1">
-                    <h3>فقط سه مرحله هس :‌ سفارش - پردازش - ارسال!</h3>
-                    <p>ما اعتبارمون رو از شما گرفتیم پس جای نگرانی وجود نداره و همین امروز میتونی با اطمینان خرید کنی.</p>
+                    <h3>فقط سه مرحله :‌ سفارش - پردازش - ارسال!</h3>
+                    <p>اعتبار شما اعتبار ماست.</p>
                   </div>
                   <div class="side-2">
                     <img src="/assets/gifs/online-shopping.gif" alt="">
@@ -148,7 +148,7 @@
                 <div class="card">
                   <div class="side-1">
                     <h3>پشتیبانی ۲۴ ساعته عین رفیق کنارته!</h3>
-                    <p>هر مشکلی دارید تو سفارش و هر گونه مشکلات فنی و مالی رو میتونید با خیال راحت به پشتیبانی بگید.</p>
+                    <p>حل مشکلاتتون رو به پشتیبانی مجرب ما بسپارید.</p>
                   </div>
                   <div class="side-2">
                     <img src="/assets/gifs/support.gif" alt="">
@@ -159,7 +159,7 @@
                 <div class="card">
                   <div class="side-1">
                     <h3>هر نقطه ای  از کشور باشی برا ما فرقی نمیکنه!</h3>
-                    <p>هر جای ایران که باشی برای ما کاری نداره ما مرسوله رو بهت میرسونیم اونم با کیفیت و بدون هیچ مشکلی</p>
+                    <p>ارسال ایمن مرسوله به سراسر کشور.</p>
                   </div>
                   <div class="side-2">
                     <img src="/assets/gifs/delivery-truck.gif" alt="">
