implemented the top searches box

--- a/index.html
+++ b/index.html
@@ -75,10 +75,41 @@
           </div>
           <div class="search">
             <div class="box">
-              <input type="text" placeholder="دنبال محصول خاصی میگردید؟" />
+              <input type="text" id="search-input" placeholder="دنبال محصول خاصی میگردید؟" />
               <button id="search-btn">
                 <img src="/assets/icons/search.svg" alt="" />
               </button>
+              <div class="top-searches">
+                <h6>بیشترین جستجوی های کاربران</h6>
+                <div class="searches">
+                  <ul>
+                    <li>
+                      <a href="#search?q=هدفون">
+                        <img src="/assets/icons/search.svg" alt="">
+                        <span>هدفون</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#search?q=هدفون">
+                        <img src="/assets/icons/search.svg" alt="">
+                        <span>هدفون</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#search?q=هدفون">
+                        <img src="/assets/icons/search.svg" alt="">
+                        <span>هدفون</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#search?q=هدفون">
+                        <img src="/assets/icons/search.svg" alt="">
+                        <span>هدفون</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
           <div class="user-actions">
@@ -128,6 +159,7 @@
           </div>
         </div>
       </header>
+      <div class="header-overlay hidden"></div>
       <main>
         <section class="website-advertise">
           <div class="swiper">
