implemented the faq section

--- a/index.html
+++ b/index.html
@@ -499,6 +499,77 @@
             </div>
           </div>
         </section>
+        <section class="faq-section">
+          <div class="side-right">
+            <h4>سوالات متداول</h4>
+            <p>سوالاتی که ممکنه داشته باشید.</p>
+            <ul>
+              <li class="faq-item">
+                <input type="checkbox" id="faq1" hidden>
+                <label for="faq1">
+                  <span class="text">
+                    به هر نقطه ای از ایران مرسوله رو میفرستید؟
+                  </span>
+                  <img src="/assets/icons/caret.png" alt="">
+                </label>
+                <div class="faq-answer">
+                  <p>بله, مرسوله به هر جایی از ایران از شرقش تا غرب و از شمالش تا جنوب براتون ارسال میکنیم!</p>
+                </div>
+              </li>
+              <li class="faq-item">
+                <input type="checkbox" id="faq2" hidden>
+                <label for="faq2">
+                  <span class="text">
+                    به هر نقطه ای از ایران مرسوله رو میفرستید؟
+                  </span>
+                  <img src="/assets/icons/caret.png" alt="">
+                </label>
+                <div class="faq-answer">
+                  <p>بله, مرسوله به هر جایی از ایران از شرقش تا غرب و از شمالش تا جنوب براتون ارسال میکنیم!</p>
+                </div>
+              </li>
+              <li class="faq-item">
+                <input type="checkbox" id="faq3" hidden>
+                <label for="faq3">
+                  <span class="text">
+                    به هر نقطه ای از ایران مرسوله رو میفرستید؟
+                  </span>
+                  <img src="/assets/icons/caret.png" alt="">
+                </label>
+                <div class="faq-answer">
+                  <p>بله, مرسوله به هر جایی از ایران از شرقش تا غرب و از شمالش تا جنوب براتون ارسال میکنیم!</p>
+                </div>
+              </li>
+              <li class="faq-item">
+                <input type="checkbox" id="faq4" hidden>
+                <label for="faq4">
+                  <span class="text">
+                    به هر نقطه ای از ایران مرسوله رو میفرستید؟
+                  </span>
+                  <img src="/assets/icons/caret.png" alt="">
+                </label>
+                <div class="faq-answer">
+                  <p>بله, مرسوله به هر جایی از ایران از شرقش تا غرب و از شمالش تا جنوب براتون ارسال میکنیم!</p>
+                </div>
+              </li>
+              <li class="faq-item">
+                <input type="checkbox" id="faq5" hidden>
+                <label for="faq5">
+                  <span class="text">
+                    به هر نقطه ای از ایران مرسوله رو میفرستید؟
+                  </span>
+                  <img src="/assets/icons/caret.png" alt="">
+                </label>
+                <div class="faq-answer">
+                  <p>بله, مرسوله به هر جایی از ایران از شرقش تا غرب و از شمالش تا جنوب براتون ارسال میکنیم!</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="side-left">
+            <img src="/assets/gifs/faq.gif" alt="">
+          </div>
+        </section>
       </main>
     </div>
     <script src="/libs/swiper/swiper-bundle.min.js"></script>
