implemented the cart page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a href="/pages/login.html">ورود</a>
         </div>
         <div class="action-links">
-          <a href="#cart">
+          <a href="/pages/cart.html">
             <img src="/assets/icons/cart.png" alt="">
             <span>سبد خرید</span>
           </a>
@@ -117,7 +117,7 @@
               <a class="action-link" href="#favorites">
                 <img src="/assets/icons/heart.png" alt="" />
               </a>
-              <a class="action-link" href="#cart">
+              <a class="action-link" href="/pages/cart.html">
                 <img src="/assets/icons/cart.png" alt="" />
               </a>
             </div>
