implemented the favorites page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="/assets/icons/cart.png" alt="">
             <span>سبد خرید</span>
           </a>
-          <a href="#favorites">
+          <a href="/pages/favorites.html">
             <img src="/assets/icons/heart.png" alt="">
             <span>علاقه مندی ها</span>
           </a>
@@ -114,7 +114,7 @@
           </div>
           <div class="user-actions">
             <div class="action-links">
-              <a class="action-link" href="#favorites">
+              <a class="action-link" href="/pages/favorites.html">
                 <img src="/assets/icons/heart.png" alt="" />
               </a>
               <a class="action-link" href="/pages/cart.html">
