fixed the close icon dosen't show in pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="section-1">
         <div class="close-div">
           <button id="close-btn">
-            <img src="assets/icons/close.png" alt="close menu button">
+            <img src="/assets/icons/close.png" alt="close menu button">
           </button>
         </div>
         <div class="brand">
