added support link and removed category link from all pages

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -47,9 +47,9 @@
             <img src="/assets/icons/product.png" alt="" />
             <span>محصولات</span>
           </a>
-          <a href="#categories">
-            <img src="/assets/icons/category.png" alt="" />
-            <span>دسته بندی ها</span>
+          <a href="#support">
+            <img src="/assets/icons/support.png" alt="">
+            <span>پشتیبانی</span>
           </a>
           <a href="#about-us">
             <img src="/assets/icons/about-us.png" alt="" />
@@ -143,9 +143,9 @@
                 <img src="/assets/icons/product.png" alt="" />
                 <span>محصولات</span>
               </a>
-              <a href="#categories">
-                <img src="/assets/icons/category.png" alt="" />
-                <span>دسته بندی ها</span>
+              <a href="#support">
+                <img src="/assets/icons/support.png" alt="">
+                <span>پشتیبانی</span>
               </a>
               <a href="#about-us">
                 <img src="/assets/icons/about-us.png" alt="" />
