implemented the categories into home page

--- a/index.html
+++ b/index.html
@@ -351,6 +351,88 @@
             </div>
           </div>
         </section>
+        <section class="categories">
+          <h4>دسته بندی ها</h4>
+          <div class="swiper">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide" style="background-color: red;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: yellow;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: lightblue;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: brown;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: seagreen;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: violet;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: wheat;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+              <div class="swiper-slide" style="background-color: tomato;">
+                <a href="#electronics-category">
+                  <img src="/assets/images/electronics.jpg" alt="">
+                  <div class="details">
+                    <h5>کالای الکترونیک</h5>
+                    <span>لپ تاپ, گوشی, تبلت و ...</span>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </section>
         <section class="most-visted">
           <h4>پربازدید ترین ها</h4>
           <div class="products">
